[gd_scene load_steps=6 format=3 uid="uid://door_scene_001"]

[ext_resource type="Script" path="res://scripts/Door.gd" id="1_door"]
[ext_resource type="Texture2D" path="res://assets/ClosedDoor.png" id="2_closed"]
[ext_resource type="Texture2D" path="res://assets/OpenDoor.png" id="3_open"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(50, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 80.0

[node name="Door" type="StaticBody2D" groups=["walls"]]
script = ExtResource("1_door")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="ClosedDoorSprite" type="Sprite2D" parent="."]
scale = Vector2(0.16, 0.16)
texture = ExtResource("2_closed")

[node name="OpenDoorSprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.16, 0.16)
texture = ExtResource("3_open")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_1")

[node name="InteractionButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.9)
offset_left = -50.0
offset_top = -80.0
offset_right = 50.0
offset_bottom = -40.0

[node name="Label" type="Label" parent="InteractionButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.9, 0.4, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "Unlock"
horizontal_alignment = 1
vertical_alignment = 1
